--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
       rel="icon"
       href="https://www.flaticon.com/svg/static/icons/svg/129/129492.svg"
     />
-
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
@@ -21,7 +25,7 @@
   <body>
     <div class="container">
       <div class="add_note">
-        <label>Write a note here 👇</label>
+        <label><b>Write a note here 👇</b></label>
         <textarea id="textarea" rows="7"></textarea>
         <button id="add">Create Note</button>
       </div>
